include/wardenclyffe/wardenclyffe.h

#pragma once

/* Warning, this file is autogenerated by cbindgen. Don't modify this manually. */

#include <cstdarg>
#include <cstddef>
#include <cstdint>
#include <cstdlib>
#include <ostream>
#include <new>


using WardenclyffeSocket = void*;

struct WardenclyffeRead {
  const void *data;
  size_t size;
  uint8_t oob;
};

struct WardenclyffeReads {
  const WardenclyffeRead *reads;
  ptrdiff_t read_count;
};


extern "C" {

extern WardenclyffeSocket wardenclyffe_create_socket(const char *path);

extern void wardenclyffe_destroy_socket(WardenclyffeSocket socket);

extern WardenclyffeReads wardenclyffe_read(WardenclyffeSocket socket);

extern bool wardenclyffe_supports_read(WardenclyffeSocket socket);

extern bool wardenclyffe_supports_write(WardenclyffeSocket socket);

extern bool wardenclyffe_write(WardenclyffeSocket socket, const void *data, size_t len);

} // extern "C"